--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "personal-stylist-web",
     "version": "0.1.0",
     "private": true,
-    "homepage": "http://Lzduque.github.io/personal-stylist-web",
+    "homepage": "https://Lzduque.github.io/personal-stylist-web",
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
