--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "personal-stylist-web",
+    "name": "personal-stylist",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://Lzduque.github.io/personal-stylist-web",
+    "homepage": "https://Lzduque.github.io/personal-stylist",
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
