--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "react-dom": "^16.13.1",
         "react-scripts": "3.4.1",
         "react-select": "^3.1.0",
-        "typescript": "~3.7.2"
+        "typescript": "~3.7.2",
+        "yarn": "^1.22.4"
     },
     "scripts": {
         "start": "PORT=2000 react-scripts start",
